# MorganShootingServer

./: .gitignore  CMakeLists.txt  build.gradle  include.cmake
game/: auto_rifle.cpp  firearms_obj.h  game_params.h  game_session.cpp  game_session.h  player.cpp  player.h  player_ingame_info.cpp  player_ingame_info.h
game/physics/: ms_collider.cpp  ms_collider.h  ms_mesh.cpp  ms_mesh.h
game/tasks/: ms_dash_task.cpp  ms_dash_task.h  ms_jump_task.cpp  ms_jump_task.h
jni/: jniUtils.cpp  jniUtils.h  morgan_natives_NtvGame.cpp  morgan_natives_NtvGame.h  morgan_natives_NtvManager.cpp  morgan_natives_NtvManager.h
libs/bullet3/: .gitignore  BulletConfig.cmake  CMakeCache.txt  CMakeLists.txt  Makefile  bullet.pc
libs/bullet3/src/: Makefile
libs/bullet3/src/Bullet3Collision/: Makefile
libs/bullet3/src/Bullet3Common/: Makefile
libs/bullet3/src/Bullet3Dynamics/: Makefile
libs/bullet3/src/Bullet3Geometry/: Makefile
libs/bullet3/src/Bullet3OpenCL/: Makefile
libs/bullet3/src/Bullet3Serialize/Bullet2FileLoader/: Makefile
libs/bullet3/src/BulletCollision/: Makefile
libs/bullet3/src/BulletDynamics/: Makefile
libs/bullet3/src/BulletInverseDynamics/: Makefile
libs/bullet3/src/BulletSoftBody/: Makefile
libs/bullet3/src/LinearMath/: CTestTestfile.cmake  Makefile
libs/json/: json_reader.cpp  json_valueiterator.inl  json_writer.cpp
msg/: ms_game_msghandler.cpp  ms_game_msghandler.h  ms_game_msghandler_CSJump.cpp  ms_game_msghandler_CSMove.cpp  ms_message.cpp  ms_message.h  msg_game_msghandler_CSDash.cpp
protocols/: 1_default.ptc  2_move.ptc  3_firearms.ptc
src/main/java/morgan/connection/: ConnectionStartUp.java
src/main/java/morgan/logic/: Connection.java  Game.java  GameManager.java  GameStart.java  GlobalPlayerManager.java  Lobby.java  PlayerInfo.java
src/main/java/morgan/messages/: BPlayer.java  BVector2.java  BVector3.java  BVector4.java  CSDash.java  CSFireStart.java  CSFireStop.java  CSJump.java  CSLogin.java  CSMove.java  CSPlayerRotate.java  CSSwitchWeapon.java  ConstMessage.java  MessageSender.java  MsgHandler.java  SCDashStart.java  SCDashStop.java  SCFireSync.java  SCGameSync.java  SCJoinGame.java  SCJump.java  SCLogin.java  SCMove.java
src/main/java/morgan/natives/: INtvFunctions.java  NtvGame.java  NtvManager.java  NtvObject.java  gen_h.bat
src/main/java/morgan/support/: ConstDistrClass.java  NtvFunctions.java
utils/: input_stream.cpp  input_stream.h  ms_link_queue.h  ms_logger.cpp  ms_logger.h  ms_simple_task.h  ms_timer.cpp  ms_timer.h  ms_types.h  ms_utils.h  ms_vector2.h  ms_vector3.h  output_stream.cpp  output_stream.h  stream_base.cpp  stream_base.h
